# shopping-deals-mcp-server

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  wrangler.jsonc
src/shopping_deals_mcp/: __init__.py  config.py  models.py  pricing.py  resale.py  server.py  service.py  vehicle.py
src/shopping_deals_mcp/sources/: __init__.py  amazon.py  base.py  craigslist.py  ebay.py  ebay_public.py  facebook_marketplace.py  offerup.py  serpapi.py
tests/: test_amazon.py  test_ebay.py  test_facebook_marketplace.py  test_offerup.py  test_pricing.py  test_resale.py  test_service.py  test_sources.py  test_vehicle.py
worker/: index.ts
