[project]
name = "shopping-deals-mcp-server"
version = "0.1.0"
description = "MCP server for finding and comparing shopping deals across marketplaces."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.28",
    "mcp[cli]>=1.27,<2",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
shopping-deals-mcp = "shopping_deals_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.build.targets.wheel]
packages = ["src/shopping_deals_mcp"]
